# mcp

./: .env.example  .gitignore  LICENSE  README.md  cloudbuild.installer.yaml  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: deploy-installer.yml  release-installer.yml
docs/: CONFIGURATION.md  GETTING-STARTED.md  TROUBLESHOOTING.md  eag-concepts.md
docs/superpowers/plans/: 2026-05-19-verb-tool-surface.md  2026-05-22-skill-distribution-installer-dx.md  2026-06-10-connector-submission-fixes.md  2026-06-10-installer-phase1a-manifest-backups.md  2026-06-10-installer-phase1b-interview-plan-execute.md  2026-06-10-installer-phase1c-error-conventions.md  2026-06-10-installer-phase2-curl-path.md  2026-06-10-installer-phase3-remove-uninstall.md  2026-06-10-installer-phase4-selfhost-polish.md  2026-06-10-installer-phase5-join-page.md  2026-06-10-installer-phase6-npm-shim-polish.md  2026-06-22-installer-wizard-implementation.md
docs/superpowers/plans/archive/: 2026-05-09-engrammic-mcp-registry-ready.md
docs/superpowers/specs/: 2026-05-09-engrammic-mcp-registry-ready.md  2026-05-22-skill-distribution-installer-dx-design.md  2026-06-06-selfhost-installer-config-rework-design.md  2026-06-10-installer-onboarding-overhaul-design.md  2026-06-21-installer-go-migration-design.md  2026-06-22-installer-cli-wizard-spec.md
installer/: Dockerfile  README.md  index.html  install-skills.ps1  install-skills.sh  install.ps1  install.sh  nginx.conf
installer-cli/: Cargo.toml
installer-cli/assets/: README.md  docker-compose.lite.yml  docker-compose.pro.yml  docker-compose.standard.yml  docker-compose.yml  models.yaml
installer-cli/docs/: 2026-06-15-config-builder-design.md
installer-cli/docs/plans/: 2026-06-15-config-builder-plan.md
installer-cli/src/: banner.rs  cli.rs  cli_install.rs  config.rs  deeplink.rs  docker.rs  doctor.rs  flow.rs  license.rs  logs.rs  main.rs  manifest.rs  providers.rs  ram.rs  scale.rs  selfhost.rs  skill_format.rs  skills.rs  tools.rs  user_config.rs
installer-go/: .gitignore  Makefile  go.mod  go.sum
installer-go/cmd/engrammic/: main.go
installer-go/internal/cli/: doctor.go  install.go  license.go  remove.go  root.go  selfhost.go  skills.go  status.go  version.go
installer-go/internal/core/: harness.go  harness_test.go  migrate.go  migrate_test.go  ports.go  ports_test.go  providers.go  providers_test.go  skills.go  skills_fetch.go  skills_fetch_test.go  skills_test.go  state.go  state_test.go
installer-go/internal/platform/: detect.go  detect_test.go  paths.go  paths_test.go  terminal.go  terminal_test.go
installer-go/internal/ui/: banner.go  output.go  plain.go  progress.go  theme.go
installer-go/internal/wizard/: execute.go  install.go  remove.go  selfhost.go  wizard.go
installer/tests/: test_install_sh.sh
npm/install/: README.md  index.js  package.json  test.js
npm/install-darwin-arm64/: package.json
npm/install-darwin-x64/: package.json
npm/install-linux-arm64/: package.json
npm/install-linux-x64/: package.json
npm/install-win32-x64/: package.json
src/delta_prime_mcp/: __init__.py  client.py  credentials.py  errors.py
src/delta_prime_mcp/tools/: context_admin.py
src/engrammic_mcp/: __init__.py  __main__.py  cli.py  client.py  config.py  credentials.py  errors.py  server.py
src/engrammic_mcp/tools/: __init__.py  believe.py  commit.py  context_accept_belief.py  context_admin.py  context_belief_state.py  context_crystallize.py  context_link.py  context_recall.py  context_reject_belief.py  context_skills.py  context_store.py  context_update_belief.py  dismiss.py  forget.py  hypothesize.py  learn.py  link.py  patterns.py  reason.py  recall.py  reflect.py  remember.py  revise.py  tick.py  trace.py
tests/: __init__.py  conftest.py  test_client.py  test_credentials.py  test_errors.py  test_tools.py
