[project]
name = "engrammic-mcp"
version = "0.3.1"
description = "MCP server for Engrammic context management"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.13"
authors = [{ name = "Aliasgar Khimani", email = "aliasgar.khimani@engrammic.ai" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
    "filelock>=3.0.0",
    "httpx[http2]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
engrammic-mcp = "engrammic_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engrammic_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ARG"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG002"]

[tool.mypy]
python_version = "3.13"
strict = true

[dependency-groups]
dev = [
    "pytest-httpx>=0.36.2",
]
