[package]
name = "engrammic-install"
version = "0.2.0"
edition = "2021"
description = "Engrammic MCP installer CLI"
license = "Apache-2.0"
repository = "https://github.com/engrammic-ai/mcp"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
colored = "2"
dirs = "5"
anyhow = "1"
ureq = "2"
flate2 = "1"
tar = "0.4"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
