[package]
name = "engrammic"
version = "0.12.2"
edition = "2021"
description = "Engrammic MCP installer CLI"
license = "Apache-2.0"
repository = "https://github.com/engrammic-ai/mcp"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
colored = "2"
console = "0.15"
dirs = "5"
anyhow = "1"
base64 = "0.21"
toml = "0.8"
toml_edit = "0.22"
ureq = "2"
flate2 = "1"
tar = "0.4"
indicatif = "0.17"
ed25519-dalek = "2"
sysinfo = "0.31"
fs2 = "0.4"
ctrlc = "3"
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
opt-level = "z"
